--- a/src/components/layout/header/Header.module.css
+++ b/src/components/layout/header/Header.module.css
@@ -6,4 +6,5 @@
   z-index: 50;
   background-color: white;
   border-bottom: 1px solid #e5e7eb;
+  box-sizing: border-box;
 }
